/*
 * $Id: ChangeLog,v 1.2059 2004/01/14 23:02:01 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2004-01-15 13:00 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source/rtl/gtwvt/gtwvt.c
     - redo hb_stack with HB_VM_STACK overwritten
     - remove
        WVT_SETCLOSEEVENT(nEventNumber)
        WVT_SETSHUTDOWNEVENT(nEventNumber)
        Use new xHarbour wide functions
  * /include/hbgtwvt.h
     - remove redundant shutdownEvent & closeEvent defines and variables

2004-01-14 23:53 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * include/hbapigt.h
  * source/rtl/gtapi.c
    + Added functions
      void HB_EXPORT hb_gtHandleClose(void);
      BOOL HB_EXPORT hb_gtHandleShutdown(void);
      BOOL HB_EXPORT hb_gtSetCloseHandler(PHB_ITEM handler);
      PHB_ITEM HB_EXPORT hb_gtGetCloseHandler(void);

      int  HB_EXPORT   hb_gtGetCloseEvent( void );
      int  HB_EXPORT   hb_gtGetShutdownEvent( void );
      void HB_EXPORT   hb_gtSetCloseEvent( int iEvent );
      void HB_EXPORT   hb_gtSetShutdownEvent( int iEvent );

  * source/rtl/gx.c
    + Added functions
      SETGTCLOSEHANDLER()
      GETGTCLOSEHANDLER()
      SETCLOSEEVENT()
      GETCLOSEEVENT()
        As this events are now XHARBOUR WIDE, and can be generated by
        ALL the gt by calling the hb_gtHandleClose() and
        hb_gtHandleShutdown(), developers should remove local versions
        of this implementations

  * source/rtl/inkey.c
    ! A pending request to VM interrupts immediately a wait

  * source/rtl/gtxvt/gtxvt.c
  * source/rtl/gtxvt/gtxvt.h
    * Using hb_gtHandleClose and hb_gtHandleShutdown to handle
      relative events.
    ! Now the application and it's forked VT are dialogating gracefully.

  * source/rtl/gtwvt/gtwvt.c
    * Using hb_gtHandleClose and hb_gtHandleShutdown to handle
      relative events.
