@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2059 2004/01/14 23:02:01 jonnymind Exp $
+ * $Id: ChangeLog,v 1.2060 2004/01/15 00:03:11 peterrees Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,14 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-01-15 01:11 UTC+0100 Francesco Saverio Giudice <info@fsgiudice.com>
+  * source/rtl/gtwvt/gtwvt.c
+    + Added WVT_GETRGBCOLOR that returns the correspondant RBG value of
+      a color ( i.e. use WVT_GetRGBColor( hb_ColorToN( "W" ) ) )
+  * tests/gtclose.prg
+    * Fixed typo
+
 2004-01-15 13:00 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
   * source/rtl/gtwvt/gtwvt.c
      - redo hb_stack with HB_VM_STACK overwritten
